refactoring changes and some issue fixes changes